[package]
name = "ConnSaturatorRS"
version = "0.1.0"
edition = "2024"
description = "A high-performance HTTP connection saturator for resiliency testing."
license = "MIT"
repository = "https://github.com/gasparoriol/ConnSaturatorRS"
readme = "README.md"
keywords = ["http", "load-testing", "resiliency", "async", "tokio"]

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
indicatif = "0.17"
